fix of non opening right navbar on mobile

--- a/css/navmenu.css
+++ b/css/navmenu.css
@@ -80,7 +80,7 @@ body {
         top: 1.2em;
         left: 70px;
         font-size: 98%;
-        width: 300px;
+        width: 220px;
         z-index: 20000;
         padding: 0 0.5em 0.5em 0.5em;
         color: #ffffff;
